--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "private": false,
   "main": "lib/index.js",
-  "types": "index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
+    "w": "tsc --watch",
     "build": "tsc",
     "prepare": "yarn build"
   },
