--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/index",
   "scripts": {
     "w": "tsc --watch",
     "build": "tsc",
